# gateway/api_country.go
@@ -1,0 +1,117 @@
+package gateway
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/gofrs/uuid"
+	"io/ioutil"
+)
+
+// @Summary Get all countries
+// @Tags Country
+// @Success 200 {object} model.JSONResponseSuccess
+// @Failure 404 {object} model.JSONResponseError
+// @Router /countries [get]
+func (s *Service) GetAllCountries(c *gin.Context) {
+
+	userUuid := s.GetUserByToken(c)
+
+	if userUuid == uuid.Nil {
+		JsonError(c, "wrong id")
+		return
+	}
+
+	data, err := s.country.GetAllCountry()
+	if err != nil {
+		JsonError(c, err.Error())
+		return
+	}
+
+	JsonSuccess(c, data)
+	return
+}
+
+// @Summary Create a new country
+// @Tags Country
+// @Success 200 {object} model.JSONResponseSuccess
+// @Failure 404 {object} model.JSONResponseError
+// @Router /countries [post]
+func (s *Service) CreateCountry(c *gin.Context) {
+
+	userUuid := s.GetUserByToken(c)
+
+	if userUuid == uuid.Nil {
+		JsonError(c, "wrong id")
+		return
+	}
+
+	data, err := s.country.CreateCountry(nil)
+	if err != nil {
+		JsonError(c, err.Error())
+		return
+	}
+
+	JsonSuccess(c, data)
+	return
+}
+
+// @Summary Update a country
+// @Tags Country
+// @Success 200 {object} model.JSONResponseSuccess
+// @Failure 404 {object} model.JSONResponseError
+// @Router /countries/{id} [put]
+// @Param id path string true "ID du pays"
+func (s *Service) UpdateCountry(c *gin.Context) {
+
+	userUuid := s.GetUserByToken(c)
+
+	if userUuid == uuid.Nil {
+		JsonError(c, "wrong id")
+		return
+	}
+
+	_, err := ioutil.ReadAll(c.Request.Body)
+	if err != nil {
+		JsonError(c, "body empty")
+		return
+	}
+
+	data, err := s.country.UpdateCountry(uuid.Nil,nil)
+	if err != nil {
+		JsonError(c, err.Error())
+		return
+	}
+
+	JsonSuccess(c, data)
+	return
+}
+
+// @Summary Delete a country
+// @Tags Country
+// @Success 200 {object} model.JSONResponseSuccess
+// @Failure 404 {object} model.JSONResponseError
+// @Router /countries/{id} [delete]
+// @Param id path string true "ID du pays"
+func (s *Service) DeleteCountry(c *gin.Context) {
+
+	userUuid := s.GetUserByToken(c)
+
+	if userUuid == uuid.Nil {
+		JsonError(c, "wrong id")
+		return
+	}
+
+	_, err := ioutil.ReadAll(c.Request.Body)
+	if err != nil {
+		JsonError(c, "body empty")
+		return
+	}
+
+	err = s.country.DeleteCountry(uuid.Nil)
+	if err != nil {
+		JsonError(c, err.Error())
+		return
+	}
+
+	JsonSuccess(c, nil)
+	return
+}
