# gateway/api_user.go
@@ -2,7 +2,8 @@ package gateway
 
 import (
 	"encoding/json"
-	"gateway/gateway/models"
+	"gateway/gateway/model"
+	"github.com/gofrs/uuid"
 	"io/ioutil"
 
 	"github.com/gin-gonic/gin"
@@ -10,24 +11,18 @@ import (
 
 // @Summary Get the current user data
 // @Tags User
-// @Success 200 {object} models.JSONResponseSuccess
-// @Failure 404 {object} models.JSONResponseError
-// @Router /users/ [get]
+// @Success 200 {object} model.JSONResponseSuccess
+// @Failure 404 {object} model.JSONResponseError
+// @Router /users [get]
 func (s *Service) GetCurrentUser(c *gin.Context) {
-	token := GetToken(c)
-	if token == "" {
-		JsonError(c, "Error while getting token")
-		return
-	}
+	userUuid := s.GetUserByToken(c)
 
-	userUuid, err := s.sessionStore.FindByToken(token)
-
-	if err != nil {
+	if userUuid == uuid.Nil {
 		JsonError(c, "wrong id")
 		return
 	}
 
-	data, err := s.userStore.FindById(userUuid)
+	data, err := s.userStore.GetUserById(userUuid)
 	if err != nil || data.Email == "" {
 		JsonError(c, "account doesn't exist")
 		return
@@ -39,23 +34,17 @@ func (s *Service) GetCurrentUser(c *gin.Context) {
 
 // @Summary Update the current user
 // @Tags User
-// @Success 200 {object} models.JSONResponseSuccess
-// @Failure 404 {object} models.JSONResponseError
+// @Success 200 {object} model.JSONResponseSuccess
+// @Failure 404 {object} model.JSONResponseError
 // @Router /users [put]
 // @Param password body string true "Mot de passe"
 // @Param active body boolean true "Compte actif"
 // @Param id_role body string true "ID du role"
 // @Param id_country body string true "ID du pays"
 func (s *Service) UpdateCurrentUser(c *gin.Context) {
-	token := GetToken(c)
-	if token == "" {
-		JsonError(c, "Error while getting token")
-		return
-	}
+	userUuid := s.GetUserByToken(c)
 
-	userUuid, err := s.sessionStore.FindByToken(token)
-
-	if err != nil {
+	if userUuid == uuid.Nil {
 		JsonError(c, "wrong id")
 		return
 	}
@@ -66,7 +55,7 @@ func (s *Service) UpdateCurrentUser(c *gin.Context) {
 		return
 	}
 
-	var updateUserData models.UserUpdate
+	var updateUserData model.UserUpdate
 
 	err = json.Unmarshal(body, &updateUserData)
 	if err != nil {
